--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">PizzaOrder</string>
+    <string name="deliver">Delivery (add $2.50)</string>
+    <string name="calculate">Calculate Total</string>
+    <string name="total">Total is</string>
+    <string name="small">Small ($7.00)</string>
+    <string name="medium">Medium ($9.00)</string>
+    <string name="large">Large ($13.00)</string>
+    <string name="extras">Extras</string>
+    <string name="cheese">Extra Cheese (add $1.75)</string>
 </resources>
